# TooGoodToGoFavouritesBot

./: .env.example  .gitignore  bot.py  init.sh  main.py  models.py  pyproject.toml
.github/workflows/: deploy_on_tailscale.yaml  deploy_on_tailscale.yml
