[project]
name = "toogoodtogobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "python-telegram-bot[job-queue]>=21.10",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "tgtg>=0.18.1",
]
